# comprehensive-rust-2day

./: CNAME  Cargo.toml  README.md  book.toml
.github/workflows/: publish.yml
src/: SUMMARY.md  index.md  thanks.md  welcome-day-2.md
src/exercises/: Cargo.toml
src/exercises/day-1/: exercises.md  solutions.md
src/exercises/day-2/: exercises.md  solutions.md
src/running-the-course/: course-structure.md
