[package]
name = "comprehensive-rust"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "for-loops"
path = "day-1/for-loops.rs"

[[bin]]
name = "luhn"
path = "day-1/luhn.rs"

[[bin]]
name = "book-library"
path = "day-2/book-library.rs"

[[bin]]
name = "points-polygons"
path = "day-2/points-polygons.rs"

[dependencies]
thiserror = "1.0.37"

[dev-dependencies]
tempfile = "3.5.0"
